examples/syntaxErrors/duplicateSignatureError.lcp
A = ()

main : A
main : ()
main = ()
main = ()

f : A
f = ()
